# image_uploader

./: .gitignore  Cargo.toml  LICENSE  README.md
image-uploader/: next.config.js  package-lock.json  package.json  tsconfig.json
image-uploader/src/app/: layout.tsx  page.tsx  uploaded.tsx  uploading.tsx
src/: main.rs
