[package]
name = "image_uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-multipart = "0.6.0"
actix-web = "4.3.1"
futures-util = "0.3.28"
image = "0.24.6"
mime = "0.3.17"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["fs"] }
uuid = { version = "1.3.3", features = ["fast-rng", "v4"] }
